<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="textspotify">SPOTIFY STREAMER</string>
    <string name="textscores">SCORES APP</string>
    <string name="textlibrary">LIBRARY APP</string>
    <string name="textbigger">BUILD IT BIGGER</string>
    <string name="textreader">XYZ READER</string>
    <string name="textownapp">CAPSTONE: MY OWN APP</string>


</resources>
