<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#000"
        android:id="@+id/textView" />

    <Button
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:text="@string/textspotify"
        android:id="@+id/spotify"
        android:background="@color/orange"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
         />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textscores"
        android:id="@+id/scores"
        android:background="@color/orange"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/textlibrary"
        android:id="@+id/library"
        android:background="@color/orange"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_height="wrap_content"
        android:text="@string/textbigger"
        android:id="@+id/bigger"
        android:background="@color/orange"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_height="wrap_content"
        android:text="@string/textreader"
        android:id="@+id/reader"
        android:background="@color/orange"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_height="wrap_content"
        android:text="@string/textownapp"
        android:textColor="@color/white"
        android:id="@+id/ownapp"
        android:background="@color/red"
        android:layout_marginTop="8dp"/>



</LinearLayout>
